compiler/tests/compile-error/type-lowering-errors.arret
(import [stdlib base])

(deftype _ unbound)
          ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ (unbound))
           ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ quote)
          ;^^^^^ ERROR primitive cannot be used as a type

(deftype _ 1)
          ;^ ERROR unsupported literal type

(deftype _ '(1))
            ;^ ERROR unsupported literal type

(deftype _ [1])
           ;^ ERROR unsupported literal type

(deftype _ (->))
           ;^^ ERROR purity cannot be used as a type constructor